Address tmux :checkhealth

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,9 +17,9 @@ set -g history-limit 50000
 # Set 256 colors
 set -s default-terminal 'tmux-256color'
 
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 # Vim x Tmux
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 set -g @plugin 'christoomey/vim-tmux-navigator'
 bind -n 'M-h' if-shell "$is_vim" 'send-keys M-h' 'resize-pane -L 1'
 bind -n 'M-j' if-shell "$is_vim" 'send-keys M-j' 'resize-pane -D 1'
@@ -29,6 +29,11 @@ bind-key -T copy-mode-vi M-h resize-pane -L 1
 bind-key -T copy-mode-vi M-j resize-pane -D 1
 bind-key -T copy-mode-vi M-k resize-pane -U 1
 bind-key -T copy-mode-vi M-l resize-pane -R 1
+
+# Enable focus events to allow vim autoread
+set-option -g focus-events on
+
+set-option -sg escape-time 20
 
 set -g @plugin 'dracula/tmux'
 
