--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,9 +8,9 @@
 #                       Made with ⌛&♥  by Adler Weber
 #
 
-include ./themes/dracula.conf
+include ~/.local/share/nvim/lazy/tokyonight.nvim/extras/kitty/tokyonight_night.conf
 
-background_opacity 0.8
+background_opacity 0.95
 font_family JetBrains Mono
 bold_font JetBrains Mono Bold
 italic_font JetBrains Mono Italic
