use tokyonight tmux theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,16 +7,17 @@
 #                             github.com/adlrwbr
 #                       Made with ⌛&♥  by Adler Weber
 
-
+# TO INSTALL PLUGINS, press prefix + I
 # reload config file
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+set -g mouse on
 
 # increase scrollback buffer size
 set -g history-limit 50000
 
-# Set 256 colors
-set -s default-terminal 'tmux-256color'
-
+# Set 256 colors for tmux 3.2
+set-option -sa terminal-features ',xterm-kitty:RGB'
 
 # Vim x Tmux
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -35,7 +36,8 @@ set-option -g focus-events on
 
 set-option -sg escape-time 20
 
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'theutz/tmux-tokyonight-nvim'
+set -g @tokyonight 'night'
 
 # Restore sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect'
