Update kitty config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,11 +6,14 @@
 #
 #                             github.com/adlrwbr
 #                       Made with ⌛&♥  by Adler Weber
-#
+
+# reload kitty with Ctrl-Shift-f5
 
 include ~/.local/share/nvim/lazy/tokyonight.nvim/extras/kitty/tokyonight_night.conf
 
-background_opacity 0.95
+# Use hyprland for blur / transparency instead of:
+# background_opacity 0.95
+
 font_family JetBrains Mono
 bold_font JetBrains Mono Bold
 italic_font JetBrains Mono Italic
@@ -23,3 +26,4 @@ hide_window_decorations yes
 remember_window_size no
 initial_window_width 1000
 initial_window_height 650
+confirm_os_window_close 0
