Update waybar and hypr config

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,12 +1,23 @@
+# Note: Switched to https://github.com/xyproto/wallutils with swaybg backend
+# https://dynamicwallpaper.club/
+# heic-install *.heic
+# settimed <filename-no-extension>
+
 preload = ~/Pictures/dunes-wallpaper.jpg
 preload = ~/Pictures/flower-wallpaper.jpg
+preload = ~/Pictures/wallpapers/desert-5835x3890.jpg
 preload = ~/Pictures/wallpapers/mossy-log-2560x1440.jpg
 preload = ~/Pictures/wallpapers/field-mountains-2560x1440.jpg
 # preload = /path/to/next_image.png
 
 # set the default wallpaper(s) seen on initial workspace(s)
+wallpaper =      , ~/Pictures/dunes-wallpaper.jpg
 wallpaper = eDP-1, ~/Pictures/flower-wallpaper.jpg
 wallpaper =  DP-6, ~/Pictures/wallpapers/field-mountains-2560x1440.jpg
 wallpaper =  DP-7, ~/Pictures/wallpapers/field-mountains-2560x1440.jpg
 wallpaper =  DP-8, ~/Pictures/wallpapers/field-mountains-2560x1440.jpg
-wallpaper =      , ~/Pictures/dunes-wallpaper.jpg
+
+wallpaper = eDP-1, ~/Pictures/wallpapers/desert-5835x3890.jpg
+wallpaper = DP-6, ~/Pictures/wallpapers/desert-5835x3890.jpg
+wallpaper = DP-7, ~/Pictures/wallpapers/desert-5835x3890.jpg
+wallpaper = DP-8, ~/Pictures/wallpapers/desert-5835x3890.jpg
