--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,11 +9,13 @@
 
 # reload kitty with Ctrl-Shift-f5
 
+# Note: Kitty opens links with ctrl-shift-leftclick by default.
+
+
 include ~/.local/share/nvim/lazy/tokyonight.nvim/extras/kitty/tokyonight_night.conf
 
 # Use hyprland for blur / transparency instead of:
 # background_opacity 0.95
-
 font_family JetBrains Mono
 bold_font JetBrains Mono Bold
 italic_font JetBrains Mono Italic
