update hypr configs, add low battery indicator, various utilities

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,71 +1,61 @@
-#
 # Please note not all available settings / options are set here.
 # For a full list, see the wiki
-#
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=eDP-1,preferred,auto,1.25
-# monitor=,highrr,auto,1.1
+# see default env variables
+# https://wiki.hyprland.org/Configuring/Environment-variables/
 
-# home profile
-# position of laptop screen - depends which docking station I'm connected to
-# $POS = 2560x0 # home profile
-# $POS = 1920x0 # carbon web profile
+# TODO: enable these after installing GPU drivers
+# NVIDIA SPECIFIC (see hyprland link above)
+# force GBM as a backend
+# export GBM_BACKEND=nvidia-drm
+# export __GLX_VENDOR_LIBRARY_NAME=nvidia
+# enable hardware acceleration on nvidia
+# export LIBVA_DRIVER_NAME=nvidia
+# fixes flickering issues? see docs
+# export WLR_DRM_NO_ATOMIC=1
+# export WLR_NO_HARDWARE_CURSORS=1
 
-# Known external monitors
+# Dark mode via https://wiki.archlinux.org/title/Dark_mode_switching
+env = GTK_THEME,Adwaita:dark
+env = GTK2_RC_FILES,/usr/share/themes/Adwaita-dark/gtk-2.0/gtkrc
+env = QT_STYLE_OVERRIDE,adwaita-dark
 
-# [Cannot escape commas in monitor desc](https://github.com/hyprwm/Hyprland/issues/2457)
-# $MONITOR_HOME_L=desc:
-# $MONITOR_HOME_L=DP-8
+# https://www.reddit.com/r/hyprland/comments/14bpjuy/no_such_interface_orgfreedesktopportalfilechooser/
+# Via the tip in the wiki, also install xdg-desktop-portal-gtk on https://wiki.hyprland.org/Useful-Utilities/Hyprland-desktop-portal/
+# env = GTK_USE_PORTAL,1
+# exec-once=bash -c 'export XDG_CURRENT_DESKTOP=gnome ; systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP ; dbus-update-activation-environment --all ; systemctl --user restart xdg-desktop-portal'
+# exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-# $MONITOR_CARBON=desc:Dell Inc. D3218HN X9R5K8865NVE
+# Fix [Some of my apps take a really long time to open](http://wiki.hyprland.org/FAQ/#some-of-my-apps-take-a-really-long-time-to-open)
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=/home/adler/dotfiles/hypr/restart-portals.sh
 
-# monitor = eDP-1, 1920x1200, $POS, 1 # position laptop display right of the monitor
-# monitor = $MONITOR_HOME_L, 2560x1440, 0x0, 1
-# monitor = $MONITOR_CARBON, 1920x1080, 0x0, 1
-monitor=,preferred,auto,1 # fallback for unknown monitors
-
-# detect monitor profiles with kanshi
-exec-once = kanshi & /home/adler/dotfiles/kanshi/auto_reload.sh
-exec = kanshictl reload
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Autostart "desktop environment" apps at launch
+# Autostart core desktop environment apps at launch
+# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = gnome-keyring-daemon --daemonize
-exec-once = swaync & waybar & nm-applet & blueman-applet
-exec-once = hyprpaper #settimed 'desert-sands'
-
-# exec-once = ~/.config/hypr/xdg-portal-hyprland # TODO
+# exec-once = gnome-keyring-daemon --daemonize
+exec-once = swaync & nm-applet & blueman-applet
+exec = pgrep waybar || waybar
+exec = pgrep hyprpaper || hyprpaper #settimed 'desert-sands'
+exec = pgrep hypridle || hypridle
+monitor = ,preferred,auto,1,bitdepth, 10 # fallback for unknown monitors - see [wiki](https://wiki.hyprland.org/Configuring/Monitors/) for more.
+exec-once = pidof -x low_battery.sh || /home/adler/dotfiles/hypr/low_battery.sh
+# exec = pgrep hypr-monitors || /home/adler/dotfiles/hypr/hypr-monitors/target/release/hypr-monitors 2>&1 >> /tmp/hypr-monitors.log
 
 # Autostart my favorite apps in certain workspaces
 # See http://wiki.hyprland.org/FAQ/#how-do-i-autostart-my-favorite-apps
 # `hyprctl clients`
-windowrulev2 = workspace 1 silent,class:^(Email-client|email-client|Logseq|Chromium)$
-windowrulev2 = workspace 2 silent,class:^(WebCord|Slack)$
-windowrulev2 = workspace 3 silent,class:^(kitty|firefox)$
-windowrulev2 = workspace 9 silent,class:^(Spotify)$
-exec-once = logseq
-exec-once = chromium https://calendar.google.com/calendar/u/0/r https://mail.google.com/mail/u/0/#inbox # email-client
-exec-once = webcord
-exec-once = slack
-exec-once = kitty
-exec-once = firefox
-exec-once = sleep 3 && spotify-launcher
-# after apps startup then unset
-exec = sleep 20 && /home/adler/dotfiles/hypr/unset_workspaces.sh
-# every config reload unset
-# TODO:   exec only if uptime is more than 2 minutes
-#         On start this needs to exec-once after 20 seconds to give time for apps to launch
-# exec = /home/adler/dotfiles/hypr/unset-workspaces.sh
+exec-once = [workspace 1 silent;noinitialfocus] logseq
+exec-once = [workspace 1 silent;noinitialfocus] chromium https://calendar.google.com/calendar/u/0/r https://mail.google.com/mail/u/0/#inbox # email-client
+exec-once = [workspace 1 silent;noinitialfocus] email-client
+exec-once = [workspace 2 silent;noinitialfocus] webcord
+exec-once = [workspace 2 silent;noinitialfocus] slack
+exec-once = [workspace 3 silent;noinitialfocus] kitty
+exec-once = [workspace 3 silent;noinitialfocus] firefox
+exec-once = [workspace 9 silent;noinitialfocus] sleep 3 && spotify-launcher
 
-# Setup screen locking and sleep/hibernate
-exec = /home/adler/dotfiles/swayidle/restart.sh
-
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
+# workspace = 9, on-created-empty:spotify-launcher
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -79,13 +69,14 @@ input {
     kb_options = grp:win_space_toggle
     kb_rules =
 
-    follow_mouse = 2
+    # follow_mouse = 2
 
     touchpad {
         natural_scroll = yes
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    float_switch_override_focus = 0 # added to try to fix rofi focus issues https://github.com/hyprwm/Hyprland/issues/5110
 }
 
 general {
@@ -117,17 +108,17 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = yes
-    blur_size = 8
-    blur_passes = 3
-    blur_new_optimizations = on
-    blur_ignore_opacity = yes
-    blur_xray = true
-
     drop_shadow = no
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+    blur {
+        enabled = yes
+        size = 8
+        passes = 3
+        ignore_opacity = yes
+        xray = true
+    }
 }
 
 animations {
@@ -144,7 +135,7 @@ animations {
     animation = fade, 1, 5, default
     animation = fadeOut, 0, 2, default # disable fadeOut animation on window/layer close
     animation = workspaces, 1, 6, myBezier, slidevert
-}, slide
+}
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -156,7 +147,6 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
 }
 
 gestures {
@@ -170,12 +160,14 @@ misc {
     disable_splash_rendering = true
     enable_swallow = false # check out swallow_regex and swallow_exception_regex
     swallow_regex = ^(kitty)$
+    focus_on_activate = false # focus on window when it is activated (i.e. new window, notification click, etc.)
 }
 
 # Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
+device {
+    name = "ven_04f3:00-04f3:311c-touchpad",
+    # for options see https://wiki.hyprland.org/Configuring/Variables/#input
+    sensitivity = 1.0,
 }
 
 # Example windowrule v1
@@ -193,9 +185,14 @@ windowrulev2 = forceinput,class:^(1Password)$
 
 
 # For pop ups and notifications that don't use notifications API
-windowrulev2 = noborder,class:^(zoom)$,title:^(zoom)$
-windowrulev2 = float,class:^(zoom)$,title:^(zoom)$
-windowrulev2 = noanim,class:^(zoom)$,title:^(zoom)$
+windowrulev2 = noborder,initialClass:^(zoom)$,initialTitle:^(zoom)$
+# windowrulev2 = float,initialClass:^(zoom)$,initialTitle:^(zoom)$
+windowrulev2 = noanim,initialClass:^(zoom)$,initialTitle:^(zoom)$
+# windowrulev2 = noinitialfocus,initialClass:^(zoom)$,floating:1,title:^()$
+# windowrulev2 = nofocus,initialClass:^(zoom)$,floating:1,title:^()$
+windowrulev2 = minsize 1 1,title:^(zoom)$ #,floating:1
+# windowrulev2 = stayfocused,title:^(zoom)$ #,floating:1
+# windowrulev2 = windowdance,initialClass:^(zoom)$
 # windowrulev2 = nofocus,class:^(zoom)$
 # windowrulev2 = noinitialfocus,class:^(zoom)$
 
@@ -204,10 +201,9 @@ windowrulev2 = float,class:^(zoom)$,title:^(Zoom -)
 windowrulev2 = size 420 600,class:^(zoom)$,title:^(Zoom -)
 # The Zoom Meeting itself
 windowrulev2 = float,class:^(zoom)$,title:^(Zoom Meeting)$ # inhibit lockscreen when in a zoom meeting
-windowrulev2 = idleinhibit always,class:^(zoom)$,title:^(Zoom Meeting)$ # inhibit lockscreen when in a zoom meeting
+# windowrulev2 = idleinhibit always,class:^(zoom)$,title:^(Zoom Meeting)$ # inhibit lockscreen when in a zoom meeting
 
 windowrulev2 = dimaround,title:^(Authenticate)$
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 windowrulev2 = rounding 40,class:^([rR]ofi)$
 windowrulev2 = noborder,class:^([rR]ofi)$
@@ -219,6 +215,7 @@ windowrulev2 = dimaround,class:^([rR]ofi)$
 # windowrulev2 = move cursor -50% -50%,class:^([rR]ofi)$
 
 windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = float,class:^(latex-matrix-helper)$
 
 windowrulev2 = opacity 0.8 0.8,class:^(kitty|Code|Slack|WebCord|Spotify|Logseq|obsidian)$
 windowrulev2 = opacity 0.8 0.7,class:^(blueman-manager|nm-applet|nm-connection-editor)$
@@ -226,6 +223,11 @@ windowrulev2 = opacity 0.8 0.7,class:^(blueman-manager|nm-applet|nm-connection-e
 # google meet sharing indicator is full screen for some reason
 windowrulev2 = workspace 3 silent,title:(sharing indicator)
 
+# Why doesn't Rofi autofocus on launch? :(
+windowrulev2 = pin,class:^(Rofi)$ #,floating:1
+windowrulev2 = float,class:^(Rofi)$ #,floating:1
+windowrulev2 = forceinput,class:^(Rofi)$ #,floating:1
+windowrulev2 = stayfocused,class:^(Rofi)$ #,floating:1
 
 $mainMod = SUPER
 $forwardSlash = code:61
@@ -236,7 +238,7 @@ $backSlash = code:51
 # use `wev` to capture keycodes
 bind = $mainMod, RETURN, exec, kitty --single-instance
 bind = $mainMod, W, exec, firefox
-bind = $mainMod + CTRL, L, exec, swaylock
+bind = $mainMod + CTRL, L, exec, loginctl lock-session # send lock event through dbus/systemd
 bind = $mainMod + ALT, E, exec, dolphin
 bind = $mainMod, A, exec, docker run -it --device /dev/kvm -p 50922:10022 -v /tmp/.X11-unix:/tmp/.X11-unix -e "DISPLAY=${DISPLAY:-:0.0}" -e GENERATE_UNIQUE=true sickcodes/docker-osx:auto
 # color picker
@@ -247,6 +249,8 @@ bind = $mainMod, N, exec, swaync-client --toggle-panel
 
 # emoji picker
 bind = $mainMod, $period, exec, ~/dotfiles/rofi/launchers/type-7/rofimoji.sh
+# latex inserter
+bind = $mainMod, U, exec, ~/src/latex-matrix-helper/tauri/src-tauri/target/release/latex-matrix-helper
 # drun
 bind = $mainMod, $forwardSlash, exec, ~/dotfiles/rofi/scripts/launcher_t7
 # power menu
@@ -263,7 +267,7 @@ bind = $mainMod, $backSlash, pass, class:^(1Password)$
 
 # screenshot / "print screen" button
 $printScreen = code:107
-bind = , $printScreen, exec, grimblast --notify copysave area $(mktemp -t screenshot-$(date +%F)-XXX)
+bind = , $printScreen, exec, ~/dotfiles/hypr/ss-record.sh
 
 # brightness keybinds
 bind = , XF86MonBrightnessUp, exec, brightnessctl set 10%+
@@ -288,11 +292,7 @@ bind = , XF86AudioStop, exec, playerctl stop
 bind = , XF86AudioPrev, exec, playerctl previous
 bind = , XF86AudioNext, exec, playerctl next
 
-
-XF86AudioNext
-
 bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exit, 
 bind = $mainMod, T, togglefloating, # toggle [T]iled and not tiled
 bind = ctrl $mainMod, T, workspaceopt, allfloat # toggle all [T]iled and not tiled
 bind = shift $mainMod, G, togglegroup
@@ -346,8 +346,8 @@ bind = $mainMod CTRL SHIFT, K, movecurrentworkspacetomonitor, u
 bind = $mainMod CTRL SHIFT, J, movecurrentworkspacetomonitor, d
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e-1
-bind = $mainMod, mouse_up, workspace, e+1
+bind = $mainMod, mouse_down, workspace, r-1
+bind = $mainMod, mouse_up, workspace, r+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
