--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -3,6 +3,8 @@
 # heic-install *.heic
 # settimed <filename-no-extension>
 
+splash = false # Why does `hyprctl splash` exist?
+
 preload = ~/Pictures/dunes-wallpaper.jpg
 preload = ~/Pictures/flower-wallpaper.jpg
 preload = ~/Pictures/wallpapers/desert-5835x3890.jpg
@@ -17,7 +19,8 @@ wallpaper =  DP-6, ~/Pictures/wallpapers/field-mountains-2560x1440.jpg
 wallpaper =  DP-7, ~/Pictures/wallpapers/field-mountains-2560x1440.jpg
 wallpaper =  DP-8, ~/Pictures/wallpapers/field-mountains-2560x1440.jpg
 
+wallpaper =      , ~/Pictures/wallpapers/desert-5835x3890.jpg
 wallpaper = eDP-1, ~/Pictures/wallpapers/desert-5835x3890.jpg
-wallpaper = DP-6, ~/Pictures/wallpapers/desert-5835x3890.jpg
-wallpaper = DP-7, ~/Pictures/wallpapers/desert-5835x3890.jpg
-wallpaper = DP-8, ~/Pictures/wallpapers/desert-5835x3890.jpg
+wallpaper =  DP-6, ~/Pictures/wallpapers/desert-5835x3890.jpg
+wallpaper =  DP-7, ~/Pictures/wallpapers/desert-5835x3890.jpg
+wallpaper =  DP-8, ~/Pictures/wallpapers/desert-5835x3890.jpg
