--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,13 +11,11 @@
 # reload config file
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
-set -g mouse on
-
-# increase scrollback buffer size
-set -g history-limit 50000
-
-# Set 256 colors for tmux 3.2
-set-option -sa terminal-features ',xterm-kitty:RGB'
+set-option -sa terminal-features ',xterm-kitty:RGB' # Set 256 colors for tmux 3.2
+set-option -g default-terminal "screen-256color"
+set-option -g focus-events on # Enable focus events to allow vim autoread
+set-option -sg escape-time 20
+# set-option -g status-style bg=default
 
 # Vim x Tmux
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -31,17 +29,63 @@ bind-key -T copy-mode-vi M-j resize-pane -D 1
 bind-key -T copy-mode-vi M-k resize-pane -U 1
 bind-key -T copy-mode-vi M-l resize-pane -R 1
 
-# Enable focus events to allow vim autoread
-set-option -g focus-events on
+set -g mouse on
+set -g base-index 1          # start indexing windows at 1 instead of 0
+set -g detach-on-destroy off # don't exit from tmux when closing a session
+set -g escape-time 0         # zero-out escape time delay
+set -g history-limit 50000 # increase scrollback buffer size (from 2,000)
+set -g renumber-windows on   # renumber all windows when any window is closed
+set -g set-clipboard on      # use system clipboard
+set -g status-interval 3     # update the status bar every 3 seconds
+set -g status-left "#[fg=blue,bold]  #S  "
+set -g status-right "#[fg=#b4befe,bold]%a %m/%d/%Y 󱑒 %l:%M %p"
+set -ga status-right "#($HOME/.config/tmux/scripts/cal.sh)"
+set -g status-justify left
+set -g status-left-length 200    # increase length (from 10)
+set -g status-right-length 200    # increase length (from 10)
+set -g status-position top       # more comfortable on the eyes
+set -g status-style 'bg=default' # transparent
+set -g window-status-current-format '#[fg=magenta,bg=black] *#I  #W#{?window_zoomed_flag,() ,}'
+set -g window-status-format '#[fg=gray,bg=default] #I  #W'
+set -g window-status-last-style 'fg=white,bg=#1e1e2e'
+set -g default-terminal "${TERM}"
+set -g message-command-style bg=default,fg=yellow
+set -g message-style bg=default,fg=yellow
+set -g mode-style bg=default,fg=yellow
+setw -g mode-keys vi
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
 
-set-option -sg escape-time 20
-
-set -g @plugin 'theutz/tmux-tokyonight-nvim'
-set -g @tokyonight 'night'
+# set -g @plugin 'theutz/tmux-tokyonight-nvim'
+# set -g @tokyonight 'night'
 
 # Restore sessions
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @continuum-restore 'on'
 
-run '~/.tmux/plugins/tpm/tpm'
+
+# set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+# set -g @fzf-url-history-limit '2000'
+# set -g @t-bind 'K'
+# set -g @t-fzf-find-binding 'ctrl-l:change-prompt(  )+reload(fd -H -d 2 -t d -E .Trash . ~)'
+# set -g @t-fzf-prompt '  '
+# set -g @tmux-last-color on
+# set -g @tmux-last-pager 'less -r'
+# set -g @tmux-last-pager 'less'
+# set -g @tmux-last-prompt-pattern ' '
+# set -g @tmux-nerd-font-window-name-shell-icon ''
+# set -g @tmux-nerd-font-window-name-show-name false
+
+# set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'fcsonline/tmux-thumbs'
+# run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+# set -g @thumbs-key F
+# set -g @plugin 'sainnhe/tmux-fzf'
+# set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+# set -g @plugin 'mskelton/tmux-last' # <prefix>t
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+
+# run '~/.tmux/plugins/tpm/tpm'
